# PAVE

./: .gitignore  README.md  SAFETY.md  pyproject.toml
.github/workflows/: pages.yml  release.yml
configprobe/: config.py  fetcher.py  models.py  parser.py  reporter.py  tester.py
configprobe/runners/: xray.py
packaging/: install.sh  nfpm.yaml  pave-wrapper.sh  postinstall.sh  preremove.sh
scripts/: orchestrate.py
src/: .dockerignore  Dockerfile  docker-compose.yml  main.py  requirements.txt
src/configprobe/: checks.py  models.py  parser.py  reporter.py  safety.py  tester.py
src/configprobe/protocols/: __init__.py  base.py  hysteria2.py  shadowsocks.py  shadowsocksr.py  socks.py  trojan.py  vless.py  vmess.py
src/configprobe/runners/: __init__.py
src/pave/: __init__.py  cli.py  config.py  fetcher.py  reporter.py
src/pave/_docker/: Dockerfile  entrypoint.py
src/pave/_webapp/: app.js  style.css
src/pave/protocols/: base.py  hysteria2.py  socks.py  tuic.py
src/pave/runners/: base.py  hysteria2.py  singbox.py  xray.py
src/scripts/: merge_results.py  orchestrate.py
webapp/: app.js  index.html  style.css
