[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pave-proxy"
version = "0.1.0"
description = "Proxy Analysis and Verification Engine — fetch, deduplicate and test free proxy/VPN configs at scale."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
pave = "pave.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pave"]

[tool.hatch.build.targets.sdist]
include = ["src/", "pyproject.toml", "README.md"]
